<resources>
    <string name="app_name">TCal</string>
    <string name="bill">Bill total</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="custom">Custom</string>
    <string name="_10">10%</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="zero">0.00</string>
    <string name="line_long">Line long\n(m)</string>
    <string name="power">Power\n(kW)</string>
    <string name="voltage">Voltage\n(V)</string>
    <string name="plate">Plate</string>
    <string name="intersections">Intersections</string>
    <string name="ground">Ground</string>
    <string name="sand">Sand\ncub</string>
    <string name="adjusting">Adjusting\ncub</string>
    <string name="filling">Filling\ncub</string>
    <string name="garbage">Garbage\ncub</string>
    <string name="project_name">Project name</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="empty">List of project is empty</string>
    <string name="create_data">Create data</string>
    <string name="change_data">Change data</string>
</resources>
