<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edges"
            android:elevation="2dp"
            android:paddingBottom="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_edges"
                android:elevation="2dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <EditText
                    android:id="@+id/project_name_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_span="4"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/project_name"
                    android:inputType="textPersonName"/>
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_edges"
                android:elevation="2dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/line_long_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_span="1"
                    android:text="@string/line_long"/>

                <EditText
                    android:id="@+id/line_long_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_span="3"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/zero"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edges"
                android:elevation="2dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/power_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_span="1"
                    android:text="@string/power"/>

                <EditText
                    android:id="@+id/power_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/zero"
                    android:inputType="numberDecimal"/>

                <TextView
                    android:id="@+id/voltage_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_span="1"
                    android:text="@string/voltage"/>

                <EditText
                    android:id="@+id/voltage_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/zero"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edges"
                android:elevation="2dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/intersections_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_span="1"
                    android:text="@string/intersections"/>

                <EditText
                    android:id="@+id/intersections_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/zero"
                    android:inputType="numberDecimal"/>

            </TableRow>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/plate_CheckBox"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/plate"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edges"
                android:elevation="2dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/clear"/>

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"

                    android:layout_marginStart="8dp"
                    android:text="@string/add"/>


            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>